--- a/fetch-json/index.html
+++ b/fetch-json/index.html
@@ -33,8 +33,8 @@
       for(var i = 0; i < json.posts.length; i++) {
         var listItem = document.createElement('li');
         listItem.innerHTML = '<strong>' + json.posts[i].title + '</strong>';
-        listItem.innerHTML +=' can be found in ' + json.posts[i].Location + '.';
-        listItem.innerHTML +=' Cost: <strong>£' + json.posts[i].html + '</strong>';
+        listItem.innerHTML += json.posts[i].primary_author + '.';
+        listItem.innerHTML +='<strong>' + json.posts[i].html + '</strong>';
         myList.appendChild(listItem);
       }
     })
