--- a/fetch-json/index.html
+++ b/fetch-json/index.html
@@ -33,7 +33,7 @@
       for(var i = 0; i < json.posts.length; i++) {
         var listItem = document.createElement('li');
         listItem.innerHTML = '<strong>' + json.posts[i].title + '</strong>' + '\n';
-        listItem.innerHTML += json.posts[i].primary_author + '.';
+        listItem.innerHTML += 'author: ' + json.posts[i].primary_author + '.';
         listItem.innerHTML +='<strong>' + json.posts[i].html + '</strong>';
         myList.appendChild(listItem);
       }
